--- a/DankEngine/DankEngine.vcxproj
+++ b/DankEngine/DankEngine.vcxproj
@@ -39,6 +39,10 @@
     <ClInclude Include="src\core\nativeapp.h" />
     <ClInclude Include="src\graphics\buffers\indexbuffer.h" />
     <ClInclude Include="src\graphics\buffers\vertexarray.h" />
+    <ClInclude Include="src\graphics\renderers\batchrenderer.h" />
+    <ClInclude Include="src\graphics\renderers\renderer.h" />
+    <ClInclude Include="src\graphics\renderers\renderer2.h" />
+    <ClInclude Include="src\graphics\renderers\renderer3.h" />
     <ClInclude Include="src\graphics\shader.h" />
     <ClInclude Include="src\graphics\buffers\vertexbuffer.h" />
     <ClInclude Include="src\maths\mat4.h" />
@@ -61,6 +65,7 @@
     <ClCompile Include="src\core\nativeapp.cpp" />
     <ClCompile Include="src\graphics\buffers\indexbuffer.cpp" />
     <ClCompile Include="src\graphics\buffers\vertexarray.cpp" />
+    <ClCompile Include="src\graphics\renderers\renderer.cpp" />
     <ClCompile Include="src\graphics\shader.cpp" />
     <ClCompile Include="src\graphics\buffers\vertexbuffer.cpp" />
     <ClCompile Include="src\maths\mat4.cpp" />
