--- a/DankEngine/DankEngine.vcxproj.filters
+++ b/DankEngine/DankEngine.vcxproj.filters
@@ -19,12 +19,12 @@
     <ClInclude Include="src\utils\memory\memory.h" />
     <ClInclude Include="src\graphics\buffers\indexbuffer.h" />
     <ClInclude Include="src\graphics\buffers\vertexbuffer.h" />
-    <ClInclude Include="src\graphics\shader.h" />
     <ClInclude Include="src\graphics\buffers\vertexarray.h" />
     <ClInclude Include="src\graphics\renderers\batchrenderer.h" />
     <ClInclude Include="src\graphics\renderers\renderer.h" />
     <ClInclude Include="src\graphics\renderers\renderer2.h" />
     <ClInclude Include="src\graphics\renderers\renderer3.h" />
+    <ClInclude Include="src\graphics\shaders\shader.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\application.cpp" />
@@ -39,8 +39,12 @@
     <ClCompile Include="src\utils\memory\memoryallocator.cpp" />
     <ClCompile Include="src\graphics\buffers\indexbuffer.cpp" />
     <ClCompile Include="src\graphics\buffers\vertexbuffer.cpp" />
-    <ClCompile Include="src\graphics\shader.cpp" />
     <ClCompile Include="src\graphics\buffers\vertexarray.cpp" />
     <ClCompile Include="src\graphics\renderers\renderer.cpp" />
+    <ClCompile Include="src\graphics\shaders\shader.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\graphics\shaders\renderer2.vs" />
+    <None Include="src\graphics\shaders\renderer2.fs" />
   </ItemGroup>
 </Project>
