--- a/DankEngine/DankEngine.vcxproj.filters
+++ b/DankEngine/DankEngine.vcxproj.filters
@@ -20,6 +20,7 @@
     <ClInclude Include="src\maths\vec4.h" />
     <ClInclude Include="src\utils\memory\memoryallocator.h" />
     <ClInclude Include="src\utils\memory\memory.h" />
+    <ClInclude Include="src\graphics\texture\texture.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\application.cpp" />
@@ -35,5 +36,6 @@
     <ClCompile Include="src\maths\mat4.cpp" />
     <ClCompile Include="src\maths\vec4.cpp" />
     <ClCompile Include="src\utils\memory\memoryallocator.cpp" />
+    <ClCompile Include="src\graphics\texture\texture.cpp" />
   </ItemGroup>
 </Project>
