--- a/DankEngine/DankEngine.vcxproj.filters
+++ b/DankEngine/DankEngine.vcxproj.filters
@@ -21,6 +21,7 @@
     <ClInclude Include="src\utils\memory\memoryallocator.h" />
     <ClInclude Include="src\utils\memory\memory.h" />
     <ClInclude Include="src\graphics\texture\texture.h" />
+    <ClInclude Include="src\graphics\font\font.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\application.cpp" />
