--- a/DankEngine/DankEngine.vcxproj
+++ b/DankEngine/DankEngine.vcxproj
@@ -38,6 +38,7 @@
     <ClInclude Include="src\graphics\shaders\shader.h" />
     <ClInclude Include="src\graphics\buffers\vertexbuffer.h" />
     <ClInclude Include="src\graphics\font\font.h" />
+    <ClInclude Include="src\graphics\texture\texture.h" />
     <ClInclude Include="src\maths\mat4.h" />
     <ClInclude Include="src\maths\math.h" />
     <ClInclude Include="src\maths\mathcommon.h" />
