--- a/DankEngine/DankEngine.vcxproj.filters
+++ b/DankEngine/DankEngine.vcxproj.filters
@@ -30,6 +30,7 @@
     <ClCompile Include="src\core\resource\resourcetexture.cpp" />
     <ClCompile Include="src\core\resource\resourcefont.cpp" />
     <ClCompile Include="src\core\resource\resourcetext.cpp" />
+    <ClCompile Include="src\graphics\font\fontdata.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\application.h" />
